Norway site update

--- a/norway/index.html
+++ b/norway/index.html
@@ -454,7 +454,7 @@
       integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
       crossorigin="anonymous"
     ></script>
-    <script src="./node_modules/bootstrap-sass/assets/javascripts/bootstrap.js"></script>
+    <script src="./js/bootstrap.min.js"></script>
     <script src = './js/counter.js'></script>
   </body>
 </html>
